--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
             </div>
         </div>
 
+        <div class="section ad  gold_background" style="margin-top: 0">
+            <div layout="column" layout-align="start center">
+                <h1 align="center" class="white_text"> PESACH SCHOOL</h1>
+            </div>
+            <div layout-align="center end" class="padded_content">
+                <h2 class="white_text" align="right" style="padding-bottom: 0">
+?                    מה עושים עם הילדים בחופשת פסח
+                </h2>
+
+                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
+                    פרטים והרשמה: 0722-439-439 או בעמוד הפייסבוק: גיא קורן – מרכזי למידה
+                    מהרו להירשם! ברישום מוקדם עד 5.4.2016 10% הנחה
+                    <br>
+                    <br>
+                    בישול, יצירה ספורט ועוד, פעילות פסח עשירה המשלבת עברית ואנגלית, צוות הדרכה סבלני ונעים  יעביר את החופשה בהנאה ולמידה של דברים מעניינים. הפעילות מתאימה לילדים עד כיתה ו-ו כאשר הילדים יתחלרו קבוצות ע"פ גילאים.
+                    <br>
+                    <br>
+                    לנוחות ברישום פתחנו שני מחזורים: 17.4-21.4 ו- 23.4-27.4
+                    שעות הפעילות בכל יום:  8:30-14:00
+                    <br>
+                    <br>
+                    עלות השתתפות במחזור הינה 970 שקלים,
+                </p>
+
+            </div>
+        </div>
+
+
+
+
         <div class="section bagrut  bluish_gray_background" style="margin-top: 0">
             <div layout="column" layout-align="start center">
                 <h1 align="center" class="white_text">קורסי השלמת בגרויות בגיא קורן Academy</h1>
@@ -182,13 +212,11 @@
             <div layout="column" layout-align="center center" class="padded_content">
                 <md-content class="blue_background fasttest-wrapper">
                     <p class="white_text " dir="rtl">
-                        Fastest- אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
-                    </p>
-                    <p class="white_text " dir="rtl">
                         אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
-
+                        <br><br>
                         <b>מורים ותלמידים</b>
-                        לראשונה בישראל אתר המציע חווית למידה ותירגול ייחודית.<br>
+                        <br>
+                        לראשונה בישראל אתר המציע חווית למידה ותירגול ייחודית.<br><br>
                         בפועל, בנייה פשוטה ומהירה של דפי עבודה ומבחני סימולציה במתמטיקה ומקצעות נוספים לרמת חטיבה ותיכון
                         (כולל רמת בגרות)<br>
                         אתר מאפשר במהלך הבנייה, בחירה של מקוצע הלמידה, רמת הלימוד, ונושאים ספציפים.
@@ -199,16 +227,19 @@
                         הכנסו עכשיו והתחילו לתרגל
                         <a href="http://fasttest.co.il/">fasttest.co.il</a>
                     </p>
-                    <p  class="white_text " dir="rtl" ng-show="fastest_extra">
+                    <p class="white_text " dir="rtl" ng-show="fastest_extra">
                         FasTest למעשה בא לתת מענה לקשיים של מורים ותלמידים רבים.
                         <br>
                         כל מורה מכיר את הקושי ולחץ בבניית מבחן, את הקושי מתן שעורי בית מתוך ספר למידה עמוס בתרגילים
-                        באתר ניתן לבחור את מספר התרגילים, הנושאים, ורמת הקושי מאפשר הדפסה מהירה וכמובן מציע את הפתרונות לתרגילים.
+                        באתר ניתן לבחור את מספר התרגילים, הנושאים, ורמת הקושי מאפשר הדפסה מהירה וכמובן מציע את הפתרונות
+                        לתרגילים.
                         <br>
                         <br>
-                        בתור תלמיד כל אחד מכיר את התחושה הלא בטוחה, כיצד המבחן עומד להראות, מהיכן לתרגל ואיך אני אספיק לפתור את כל הבחינה בזמן כל כך קצר.
+                        בתור תלמיד כל אחד מכיר את התחושה הלא בטוחה, כיצד המבחן עומד להראות, מהיכן לתרגל ואיך אני אספיק
+                        לפתור את כל הבחינה בזמן כל כך קצר.
                         <br>
-                        Fastest מאפשר לבנות דף תירגול ע"פ נושא אחד בלבד, כך שניתן לעבוד על נושא מסויים. כמו כן גם מאפשר לבנות מבחן סימולצה המאפשר הכנה מדוייקת ע"פ נושאי הבחינה ותיכנון זמן נכון.
+                        Fastest מאפשר לבנות דף תירגול ע"פ נושא אחד בלבד, כך שניתן לעבוד על נושא מסויים. כמו כן גם מאפשר
+                        לבנות מבחן סימולצה המאפשר הכנה מדוייקת ע"פ נושאי הבחינה ותיכנון זמן נכון.
                         <br><br>
 
                         בהצלחה במחן הקרוב
@@ -244,14 +275,14 @@
 
         <div class="section school" style="overflow: hidden">
             <div layout="column" layout-align="start center">
-                <h1 class="red_title">בית ספר להישגים</h1>
+                <h1 class="red_title">בית ספר הישגים</h1>
             </div>
 
             <md-content style="width: 80%; padding-right: 10%;padding-left: 10%">
                 <img src="img/school.png" style="padding-right: 6%; width: 15%;float: left;">
                 <p
                         style="direction:rtl; padding-left: 6%;font-size: large">
-                    <b> בית ספר להישגים </b>הוקם כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.<br>
+                    <b> בית ספר הישגים </b>הוקם כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.<br>
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.<br>
                     הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"<br>
                     <br>
