--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div layout="column" layout-align="start center">
                 <h1 align="center" class="white_text"> PESACH SCHOOL</h1>
             </div>
-            <div layout-align="center end" class="padded_content">
+            <div layout="column" layout-align="center end" class="padded_content">
                 <h2 class="white_text" align="right" style="padding-bottom: 0">
 ?                    מה עושים עם הילדים בחופשת פסח
                 </h2>
@@ -87,7 +87,9 @@
                     <br>
                     עלות השתתפות במחזור הינה 970 שקלים,
                 </p>
-
+                <br>
+                <a dir="rtl" href="" class="white_text read_more" ng-click="toggleAdExtra()">קרא עוד</a>
+                <img ng-show="adExtra" src="img/schedule.png">
             </div>
         </div>
 
