--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </p>
                     <p class="white_text " dir="rtl">
                         הכנסו עכשיו והתחילו לתרגל
-                        <a href="http://fasttest.co.il/">fasttest.co.il</a>
+                        <a style="color: white;" href="http://fasttest.co.il/">fasttest.co.il</a>
                     </p>
                     <p class="white_text " dir="rtl" ng-show="fastest_extra">
                         FasTest למעשה בא לתת מענה לקשיים של מורים ותלמידים רבים.
