--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div layout="column" layout-align="center end" class="padded_content">
                 <h2 class="white_text" align="right" style="padding-bottom: 0">
-?                    מה עושים עם הילדים בחופשת פסח
+                    ? מה עושים עם הילדים בחופשת פסח
                 </h2>
 
                 <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
@@ -78,11 +78,13 @@
                     מהרו להירשם! ברישום מוקדם עד 5.4.2016 10% הנחה
                     <br>
                     <br>
-                    בישול, יצירה ספורט ועוד, פעילות פסח עשירה המשלבת עברית ואנגלית, צוות הדרכה סבלני ונעים  יעביר את החופשה בהנאה ולמידה של דברים מעניינים. הפעילות מתאימה לילדים עד כיתה ו-ו כאשר הילדים יתחלרו קבוצות ע"פ גילאים.
+                    בישול, יצירה ספורט ועוד, פעילות פסח עשירה המשלבת עברית ואנגלית, צוות הדרכה סבלני ונעים יעביר את
+                    החופשה בהנאה ולמידה של דברים מעניינים. הפעילות מתאימה לילדים עד כיתה ו-ו כאשר הילדים יתחלרו קבוצות
+                    ע"פ גילאים.
                     <br>
                     <br>
                     לנוחות ברישום פתחנו שני מחזורים: 17.4-21.4 ו- 23.4-27.4
-                    שעות הפעילות בכל יום:  8:30-14:00
+                    שעות הפעילות בכל יום: 8:30-14:00
                     <br>
                     <br>
                     עלות השתתפות במחזור הינה 970 שקלים,
@@ -94,8 +96,6 @@
         </div>
 
 
-
-
         <div class="section bagrut  bluish_gray_background" style="margin-top: 0">
             <div layout="column" layout-align="start center">
                 <h1 align="center" class="white_text">קורסי השלמת בגרויות בגיא קורן Academy</h1>
@@ -104,6 +104,7 @@
                 <h2 class="white_text" align="right" style="text-decoration: underline;padding-bottom: 0">
                     קורס השלמה במתמטיקה ל 3-4-5 יחידות
                 </h2>
+                <!--
                 <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
                     הבגרות במתמטיקה נחשבת לבגרות המאתגרת ביותר ולשם כך דרושים:
                     מורים מקצועיים בעלי סבלנות וניסיון שניתן להתחבר אליהם בקלות
@@ -122,7 +123,75 @@
                     בנוסף גם תכלו לקבל יעוץ וחוונה בבחירת רמת הלימוד תוך הסתכלות על דרישות אקדמיות, מבחן יכולת וזמינות
                     להשקיע בלמידה.
                     <br>
+                </p>-->
+                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
+                    קורסי השלמת בגרויות לבוגרים, בגיא קורן Academy
+                    <br>
+                    חברה אחרי צבא או לפני המעוניינים לשפר או להשלים בגרויות במרכז למידה ייחודי המציע למידה בקבוצות קטנות
+                    עם דגש על יחס אישי. מוזמנים ליצור קשר 0722-439439
+                    בגיא קורן אקדמי תכלו להנות מ:
+                    <br>
                 </p>
+                <ul dir="rtl" class="white_text" style="padding-top: 0">
+                    <li>מורים הטובים ומקצועיים ביותר, בעלי סבלנות וזמינות עם רצון עז ללמד.</li>
+                    <li>ספרי למידה שפתחו ע״י גיא מתוך ניסיון של שנים ומפגש עם אלפי תלמידים.</li>
+                    <li>אתר fastest - המאפשר בניית מבחני סימולציה בצורה פשוטה.</li>
+                    <li>קבוצות למידה של עד 16 תלמידים</li>
+                    <li>מרכז שקט וטכנולוגי.</li>
+                </ul>
+                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
+                    <b>חינם! </b>יעוץ והחוונה רמות הלימוד במתמטיקה ואנגלית, עזרה בבחרית מקצוע הבחירה וקבלת החלטות על
+                    שיפור ציון
+                    במקצעות בהן כבר נבחתם בעבר תוך הסתכלות על דרישות אקדמיות, מבחן יכולת וזמינות להשקיעה בלימודים.
+                </p>
+
+                <!-- TABLE GOES HERE-->
+                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
+                    מועדי בחינות הבגרות הקרובה (קיץ 2016):
+                </p>
+                <div ng-include="'views/bagrut.html'"></div>
+
+                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0"
+                   ng-show="bagrut_extra">
+                    קורס השלמה במתמטיקה ל 3-4-5 יחידות
+                    <br>
+                    הבגרות במתמטיקה נחשבת לבגרות המאתגרת ביותר ולשם כך דרושים:
+                    <br><br>
+                    מורים מקצועיים בעלי סבלנות וניסיון שניתן להתחבר אליהן בקלות
+                    <br>
+                    חומרי למידה מסודרים, עם הסברים אינטואיטיביים ופשוטים המציגים את החומר הנלמד בצורה פשוטה ומאגר
+                    <br>
+                    תרגילים מדורג בכל נושאעד לרמת שאלות בגרות ומבחנים לדוגמה.
+                    <br>
+                    קבוצות למידה קטנות אשר מאפשרות למורה לתת יחס אישי ועם זאת מפתחות כישורי למידה עצמאית וקבוצתית
+                    <br>
+                    סביבת לימוד נעימה ושקטה.
+                    <br>
+                    כל אלה תזכו לקבל בגיא קורן אקדמי
+                    <br><br>
+                    מסלולי הבחינה השונים בבגרות במתמטיקה
+                    <br>
+                    - קורס של 3 יחידות (שאלונים 801, 802 ו-803) באורך של 120שעות
+                    <br>
+                    נושאי הלמידה: אלגברה ובעיות מלוליות, טריגונומטריה במישור ובמרחב, סדרות, גדילה ודעיכה מעריכית,
+                    <br>
+                    התפלגות נורמלית, חשבון דפרנצאלי ואיטגרלי, הנדסה אנליטית,
+                    <br><br>
+                    קורס של 4 יחידות (שאלונים 804 ו-805) באורך של 180 שעות
+                    <br>
+                    נושאי הלמידה:אלגברה ובעיות מלוליות, טריגונומטריה במישור ובמרחב, סדרות, גדילה ודעיכה מעריכית, התפלגות
+                    <br>
+                    נורמלית, חשבון דפרנצאלי ואיטגרלי, הנדסה אנליטית,
+                    <br><br>
+                    קורס של 5 יחידות (שאלונים 806 ו-807) באורך של 200 שעות
+                    <br>
+                    נושאי הלמידה:אלגברה ובעיות מלוליות, טריגונומטריה במישור ובמרחב, סדרות, גדילה ודעיכה מעריכית, התפלגות
+                    נורמלית, חשבון דפרנצאלי ואיטגרלי, הנדסה אנליטית, מספרים מרוכבים וקטורים
+                    <br><br>
+                    מסלולי למידה שונים גם בשאר המקצועות . שאל את נציג השירות: 0722-439-439
+
+                </p>
+                <a dir="rtl" href="" class="white_text read_more" ng-click="toggleBagrutExtra()">קרא עוד</a>
             </div>
         </div>
 
@@ -214,16 +283,18 @@
             <div layout="column" layout-align="center center" class="padded_content">
                 <md-content class="blue_background fasttest-wrapper">
                     <p class="white_text " dir="rtl">
-                        אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
-                        <br><br>
                         <b>מורים ותלמידים</b>
                         <br>
-                        לראשונה בישראל אתר המציע חווית למידה ותירגול ייחודית.<br><br>
+                        לראשונה בישראל אתר המציע חווית למידה ותירגול ייחודית.
+                        <br><br>
                         בפועל, בנייה פשוטה ומהירה של דפי עבודה ומבחני סימולציה במתמטיקה ומקצעות נוספים לרמת חטיבה ותיכון
-                        (כולל רמת בגרות)<br>
-                        אתר מאפשר במהלך הבנייה, בחירה של מקוצע הלמידה, רמת הלימוד, ונושאים ספציפים.
+                        (כולל רמת בגרות)
+                        האתר מאפשר במהלך הבנייה, בחירת מקצוע הלמידה, רמת הלימוד, ונושאים ספציפים.
+                        <br><br>
                         דפי העבודה והמבחנים מוצגים בצורה נוחה נותנים אפשרות ללמוד בכל מקום וכמובן כוללים פתרונות (לחלק
                         מהתרגילים גם פתרוות מלאים).
+                        <br><br>
+                        הכנסו עכשיו והתחילו לתרגל
                     </p>
                     <p class="white_text " dir="rtl">
                         הכנסו עכשיו והתחילו לתרגל
@@ -231,20 +302,22 @@
                     </p>
                     <p class="white_text " dir="rtl" ng-show="fastest_extra">
                         FasTest למעשה בא לתת מענה לקשיים של מורים ותלמידים רבים.
+                        <br><br>
+                        <b>כל מורה </b>מכיר את הקושי ולחץ בבניית מבחן, את הקושי במתן שעורי בית מתוך ספרי למידה עמוסים
+                        בתרגילים
                         <br>
-                        כל מורה מכיר את הקושי ולחץ בבניית מבחן, את הקושי מתן שעורי בית מתוך ספר למידה עמוס בתרגילים
                         באתר ניתן לבחור את מספר התרגילים, הנושאים, ורמת הקושי מאפשר הדפסה מהירה וכמובן מציע את הפתרונות
                         לתרגילים.
-                        <br>
-                        <br>
-                        בתור תלמיד כל אחד מכיר את התחושה הלא בטוחה, כיצד המבחן עומד להראות, מהיכן לתרגל ואיך אני אספיק
-                        לפתור את כל הבחינה בזמן כל כך קצר.
-                        <br>
+                        <br><br>
+                        <b>כל תלמיד </b>מכיר את התחושה הלא בטוחה, כיצד המבחן עומד להראות, מהיכן לתרגל ואיך אני אספיק
+                        לפתור את
+                        כל הבחינה בזמן כל כך קצר.
+                        <br><br>
                         Fastest מאפשר לבנות דף תירגול ע"פ נושא אחד בלבד, כך שניתן לעבוד על נושא מסויים. כמו כן גם מאפשר
                         לבנות מבחן סימולצה המאפשר הכנה מדוייקת ע"פ נושאי הבחינה ותיכנון זמן נכון.
                         <br><br>
 
-                        בהצלחה במחן הקרוב
+                        בהצלחה במבחן הקרוב
                     </p>
 
                     <a dir="rtl" href="" class="white_text read_more" ng-click="toggleFastestExtra()">קרא עוד</a>
@@ -328,8 +401,6 @@
                     <a href="" class="black_anchor read_more" ng-click="toggleASchoolExtra()">קרא עוד</a>
 
                 </p>
-
-
             </md-content>
 
         </div>
@@ -351,13 +422,19 @@
         </md-fab-trigger>
         <md-fab-actions>
             <md-button aria-label="Phone" class="md-fab md-raised md-mini">
-                <a href="tel:+0722-439-439"><md-icon md-svg-src="img/phone.svg" aria-label="Phone Number"></md-icon></a>
+                <a href="tel:+0722-439-439" ng-click="showAlert('מספר טלפון','0722-439-439','OK')">
+                    <md-icon md-svg-src="img/phone.svg" aria-label="Phone Number"></md-icon>
+                </a>
             </md-button>
             <md-button aria-label="Facebook" class="md-fab md-raised md-mini">
-                <a href="https://www.facebook.com/גיא-קורן-מרכזי-למידה-151417915020746"><md-icon md-svg-src="img/facebook.svg" aria-label="Facebook"></md-icon></a>
+                <a href="https://www.facebook.com/גיא-קורן-מרכזי-למידה-151417915020746">
+                    <md-icon md-svg-src="img/facebook.svg" aria-label="Facebook"></md-icon>
+                </a>
             </md-button>
             <md-button aria-label="Facebook" class="md-fab md-raised md-mini">
-                <a href="https://www.instagram.com/guy_koren_academy/"><md-icon md-svg-src="img/instagram.svg" aria-label="Instagram"></md-icon></a>
+                <a href="https://www.instagram.com/guy_koren_academy/">
+                    <md-icon md-svg-src="img/instagram.svg" aria-label="Instagram"></md-icon>
+                </a>
             </md-button>
         </md-fab-actions>
     </md-fab-speed-dial>
