--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
                     מועדי בחינות הבגרות הקרובה (קיץ 2016):
                 </p>
-                <div ng-include="'views/bagrut.html'"></div>
+                <div ng-include="'views/bagrut.html'" ng-show="bagrut_extra"></div>
 
                 <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0"
                    ng-show="bagrut_extra">
