Fixed guys typos *sigh*..

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <br>
                     <br>
                     בישול, יצירה ספורט ועוד, פעילות פסח עשירה המשלבת עברית ואנגלית, צוות הדרכה סבלני ונעים יעביר את
-                    החופשה בהנאה ולמידה של דברים מעניינים. הפעילות מתאימה לילדים עד כיתה ו-ו כאשר הילדים יתחלרו קבוצות
+                    החופשה בהנאה ולמידה של דברים מעניינים. הפעילות מתאימה לילדים עד כיתה ו-ו כאשר הילדים יתחלקו לקבוצות
                     ע"פ גילאים.
                     <br>
                     <br>
@@ -140,7 +140,7 @@
                     <li>מרכז שקט וטכנולוגי.</li>
                 </ul>
                 <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
-                    <b>חינם! </b>יעוץ והחוונה רמות הלימוד במתמטיקה ואנגלית, עזרה בבחרית מקצוע הבחירה וקבלת החלטות על
+                    <b>חינם! </b>יעוץ והכוונה רמות הלימוד במתמטיקה ואנגלית, עזרה בבחירת מקצוע הבחירה וקבלת החלטות על
                     שיפור ציון
                     במקצעות בהן כבר נבחתם בעבר תוך הסתכלות על דרישות אקדמיות, מבחן יכולת וזמינות להשקיעה בלימודים.
                 </p>
@@ -157,11 +157,11 @@
                     <br>
                     הבגרות במתמטיקה נחשבת לבגרות המאתגרת ביותר ולשם כך דרושים:
                     <br><br>
-                    מורים מקצועיים בעלי סבלנות וניסיון שניתן להתחבר אליהן בקלות
+                    מורים מקצועיים בעלי סבלנות וניסיון שניתן להתחבר אליהם בקלות
                     <br>
                     חומרי למידה מסודרים, עם הסברים אינטואיטיביים ופשוטים המציגים את החומר הנלמד בצורה פשוטה ומאגר
                     <br>
-                    תרגילים מדורג בכל נושאעד לרמת שאלות בגרות ומבחנים לדוגמה.
+                    תרגילים מדורג בכל נושא עד לרמת שאלות בגרות ומבחנים לדוגמה.
                     <br>
                     קבוצות למידה קטנות אשר מאפשרות למורה לתת יחס אישי ועם זאת מפתחות כישורי למידה עצמאית וקבוצתית
                     <br>
@@ -171,7 +171,7 @@
                     <br><br>
                     מסלולי הבחינה השונים בבגרות במתמטיקה
                     <br>
-                    - קורס של 3 יחידות (שאלונים 801, 802 ו-803) באורך של 120שעות
+                    - קורס של 3 יחידות (שאלונים 801, 802 ו-803) באורך של 120 שעות
                     <br>
                     נושאי הלמידה: אלגברה ובעיות מלוליות, טריגונומטריה במישור ובמרחב, סדרות, גדילה ודעיכה מעריכית,
                     <br>
@@ -385,7 +385,7 @@
                     טניס, ריקוד, כדורגל, כדורסל ועוד. אנו מנסים לשמש כקרש קפיצה לספורטיים המצטיינים בתוכנית לאגודות ספורט שונות בארץ, תוך מתן דגש על הפעילות הלימודית של הילד.
 <br><br>
                     <b>בתחום הלמידה זוכים משתתפים לשיעורי למידה של מקצעות החשבון והאנגלית</b>
-                    ע"י מורים מקצועים וסבלנים אשר מקנים למשתתפים כלים ללמידה עצמאית וקבוצתית ומעודדים יזמות וחשיבה. חשוב לציין שאנו בקשר רצוף עם הורי מורי התלמיד.
+                    ע"י מורים מקצועים וסבלנים אשר מקנים למשתתפים כלים ללמידה עצמאית וקבוצתית ומאודדים יזמות וחשיבה. חשוב לציין שאנו בקשר רצוף עם הורי מורי התלמיד.
 <br><br>
                     <b>בנוסף פועל מרכז למידה בשעות הצהריים (סיום הלימודים ועד 16:30)</b>
                     , המרכז את התלמידים אליו וצוות ההדרכה הכולל מדריך לימודי מסור אשר נותן תמיכה בשעורי הבית, ומדריך ספורטיבי סבלני אשר מעביר פעילויות ספורטיויות מגוונות אשר מאפשרות לכל תלמיד לבלוט.
@@ -393,7 +393,7 @@
 <br><br>
                     במהלך השנה אנו נתקלים במשתתפים בתוכנית אשר
                     <b>מאמצים ערכים של הישגיות בלימודים דרך הספורט.</b>
-                    בעקבות פעילות ספורטיוית מגוונת, משתתפים בתוכנית שאינם היו מתחברים לפעילות ספורטיוית מוצאים עצמם פעיים מעוד וגם נהנים.
+                    בעקבות פעילות ספורטיוית מגוונת, משתתפים בתוכנית שאינם היו מתחברים לפעילות ספורטיוית מוצאים עצמם פעילים מאוד וגם נהנים.
 <br><br>
                     כמובן שהפעילות נמשכת גם בחגים ובחופשת הקיץ ופועלת משעות הבוקר ועד הצהריים.
 
