Removed pesach school

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           type="image/png"
           href="img/logo.png">
     <meta name="Description" CONTENT="מרכזי למידה - גיא קורן">
+    <meta name="google-site-verification" content="18YxyZBb0Wo8iFDKo0jM-LG1OsMowEh_5hJyRjSagDA"/>
 </head>
 <body ng-app="GuyKoren" ng-controller="AppController">
 
@@ -63,38 +64,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="section ad  red_background" style="margin-top: 0">
-            <div layout="column" layout-align="start center">
-                <h1 align="center" class="white_text"> PESACH SCHOOL</h1>
-            </div>
-            <div layout="column" layout-align="center end" class="padded_content">
-                <h2 class="white_text" align="right" style="padding-bottom: 0">
-                    ? מה עושים עם הילדים בחופשת פסח
-                </h2>
-
-                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
-                    פרטים והרשמה: 0722-439-439 או בעמוד הפייסבוק: גיא קורן – מרכזי למידה
-                    מהרו להירשם! ברישום מוקדם עד 5.4.2016 10% הנחה
-                    <br>
-                    <br>
-                    בישול, יצירה ספורט ועוד, פעילות פסח עשירה המשלבת עברית ואנגלית, צוות הדרכה סבלני ונעים יעביר את
-                    החופשה בהנאה ולמידה של דברים מעניינים. הפעילות מתאימה לילדים עד כיתה ו-ו כאשר הילדים יתחלקו לקבוצות
-                    ע"פ גילאים.
-                    <br>
-                    <br>
-                    לנוחות ברישום פתחנו שני מחזורים: 17.4-21.4 ו- 23.4-27.4
-                    שעות הפעילות בכל יום: 8:30-14:00
-                    <br>
-                    <br>
-                    עלות השתתפות במחזור הינה 970 שקלים,
-                </p>
-                <br>
-                <a dir="rtl" href="" class="white_text read_more" ng-click="toggleAdExtra()">קרא עוד</a>
-                <img ng-show="adExtra" src="img/schedule.png">
-            </div>
-        </div>
-
 
         <div class="section bagrut  bluish_gray_background" style="margin-top: 0">
             <div layout="column" layout-align="start center">
